@@ -12,29 +12,24 @@ import com.intellij.openapi.application.JetBrainsProtocolHandler;
 import com.intellij.openapi.application.PathManager;
 import com.intellij.openapi.application.impl.ApplicationInfoImpl;
 import com.intellij.openapi.diagnostic.Logger;
-import com.intellij.openapi.extensions.*;
+import com.intellij.openapi.extensions.ExtensionInstantiationException;
+import com.intellij.openapi.extensions.ExtensionsArea;
+import com.intellij.openapi.extensions.PluginDescriptor;
+import com.intellij.openapi.extensions.PluginId;
+import com.intellij.openapi.extensions.impl.ExtensionPointImpl;
 import com.intellij.openapi.extensions.impl.ExtensionsAreaImpl;
 import com.intellij.openapi.project.Project;
 import com.intellij.openapi.util.BuildNumber;
-import com.intellij.openapi.util.InvalidDataException;
-import com.intellij.openapi.util.JDOMUtil;
-import com.intellij.openapi.util.SafeJdomFactory;
 import com.intellij.openapi.util.io.FileUtilRt;
 import com.intellij.openapi.util.text.StringUtil;
-import com.intellij.openapi.util.text.StringUtilRt;
 import com.intellij.reference.SoftReference;
-import com.intellij.serialization.SerializationException;
 import com.intellij.util.*;
 import com.intellij.util.concurrency.AppExecutorUtil;
 import com.intellij.util.containers.ContainerUtil;
-import com.intellij.util.containers.ContainerUtilRt;
 import com.intellij.util.execution.ParametersListUtil;
 import com.intellij.util.graph.DFSTBuilder;
 import com.intellij.util.graph.GraphGenerator;
-import com.intellij.util.io.URLUtil;
 import com.intellij.util.lang.UrlClassLoader;
-import org.jdom.Element;
-import org.jdom.JDOMException;
 import org.jetbrains.annotations.ApiStatus;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
@@ -46,13 +41,13 @@ import java.lang.invoke.MethodHandles;
 import java.lang.invoke.MethodType;
 import java.lang.ref.Reference;
 import java.net.MalformedURLException;
-import java.net.URI;
-import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.*;
 import java.util.*;
-import java.util.concurrent.*;
+import java.util.concurrent.CompletableFuture;
+import java.util.concurrent.CompletionStage;
+import java.util.concurrent.ExecutionException;
 import java.util.function.BiFunction;
 import java.util.function.Function;
 import java.util.stream.Collectors;
@@ -81,7 +76,7 @@ public final class PluginManagerCore {
 
   private static final PluginId SPECIAL_IDEA_PLUGIN_ID = PluginId.getId("IDEA CORE");
 
-  private static final String PROPERTY_PLUGIN_PATH = "plugin.path";
+  static final String PROPERTY_PLUGIN_PATH = "plugin.path";
 
   public static final String DISABLE = "disable";
   public static final String ENABLE = "enable";
@@ -91,6 +86,7 @@ public final class PluginManagerCore {
   private static Reference<Map<PluginId, Set<String>>> ourBrokenPluginVersions;
   private static volatile IdeaPluginDescriptorImpl[] ourPlugins;
   static volatile List<IdeaPluginDescriptorImpl> ourLoadedPlugins;
+  private static List<PluginError> ourLoadingErrors;
 
   private static Map<String, String[]> ourAdditionalLayoutMap = Collections.emptyMap();
 
@@ -108,6 +104,10 @@ public final class PluginManagerCore {
   @SuppressWarnings("StaticNonFinalField")
   @ApiStatus.Internal
   public static Set<PluginId> ourPluginsToEnable;
+
+  @ApiStatus.Internal
+  public static boolean ourDisableNonBundledPlugins;
+
   /**
    * Bundled plugins that were updated.
    * When we update bundled plugin it becomes not bundled, so it is more difficult for analytics to use that data.
@@ -119,14 +119,12 @@ public final class PluginManagerCore {
 
   private static BuildNumber ourBuildNumber;
 
-  @Nullable
   @ApiStatus.Internal
-  public static String getPluginsCompatibleBuild() {
+  public static @Nullable String getPluginsCompatibleBuild() {
     return System.getProperty("idea.plugins.compatible.build");
   }
 
-  @Nullable
-  private static Runnable disabledPluginListener;
+  private static @Nullable Runnable disabledPluginListener;
 
   @ApiStatus.Internal
   public static void setDisabledPluginListener(@NotNull Runnable value) {
@@ -153,14 +151,12 @@ public final class PluginManagerCore {
    * Returns descriptors of plugins which are successfully loaded into IDE. The result is sorted in a way that if each plugin comes after
    * the plugins it depends on.
    */
-  @NotNull
-  public static List<? extends IdeaPluginDescriptor> getLoadedPlugins() {
+  public static @NotNull List<? extends IdeaPluginDescriptor> getLoadedPlugins() {
     return getLoadedPlugins(null);
   }
 
-  @NotNull
   @ApiStatus.Internal
-  public static List<IdeaPluginDescriptorImpl> getLoadedPlugins(@Nullable ClassLoader coreClassLoader) {
+  public static @NotNull List<IdeaPluginDescriptorImpl> getLoadedPlugins(@Nullable ClassLoader coreClassLoader) {
     List<IdeaPluginDescriptorImpl> result = ourLoadedPlugins;
     if (result == null) {
       loadAndInitializePlugins(null, coreClassLoader);
@@ -227,8 +223,7 @@ public final class PluginManagerCore {
    */
   @Deprecated
   @ApiStatus.ScheduledForRemoval(inVersion = "2020.2")
-  @NotNull
-  public static List<String> getDisabledPlugins() {
+  public static @NotNull List<String> getDisabledPlugins() {
     Set<PluginId> list = getDisabledIds();
     return new AbstractList<String>() {
       //<editor-fold desc="Just a ist-like immutable wrapper over a set; move along.">
@@ -257,8 +252,7 @@ public final class PluginManagerCore {
     };
   }
 
-  @NotNull
-  static Set<PluginId> getDisabledIds() {
+  static @NotNull Set<PluginId> getDisabledIds() {
     Set<PluginId> result = ourDisabledPlugins;
     if (result != null) {
       return result;
@@ -283,8 +277,7 @@ public final class PluginManagerCore {
     return result;
   }
 
-  @NotNull
-  public static Set<PluginId> disabledPlugins() {
+  public static @NotNull Set<PluginId> disabledPlugins() {
     return Collections.unmodifiableSet(getDisabledIds());
   }
 
@@ -310,8 +303,7 @@ public final class PluginManagerCore {
     return set != null && set.contains(descriptor.getVersion());
   }
 
-  @NotNull
-  private static Map<PluginId, Set<String>> getBrokenPluginVersions() {
+  private static @NotNull Map<PluginId, Set<String>> getBrokenPluginVersions() {
     Map<PluginId, Set<String>> result = SoftReference.dereference(ourBrokenPluginVersions);
     if (result != null) {
       return result;
@@ -344,13 +336,7 @@ public final class PluginManagerCore {
 
         PluginId pluginId = PluginId.getId(tokens.get(0));
         List<String> versions = tokens.subList(1, tokens.size());
-
-        Set<String> set = result.get(pluginId);
-        if (set == null) {
-          set = new HashSet<>();
-          result.put(pluginId, set);
-        }
-        set.addAll(versions);
+        result.computeIfAbsent(pluginId, k -> new HashSet<>()).addAll(versions);
       }
     }
     catch (IOException e) {
@@ -440,8 +426,7 @@ public final class PluginManagerCore {
    * This is an internal method, use {@link PluginException#createByClass(String, Throwable, Class)} instead.
    */
   @ApiStatus.Internal
-  @NotNull
-  public static PluginException createPluginException(@NotNull String errorMessage, @Nullable Throwable cause,
+  public static @NotNull PluginException createPluginException(@NotNull String errorMessage, @Nullable Throwable cause,
                                                       @NotNull Class<?> pluginClass) {
     ClassLoader classLoader = pluginClass.getClassLoader();
     PluginId pluginId = classLoader instanceof PluginClassLoader ? ((PluginClassLoader)classLoader).getPluginId()
@@ -449,21 +434,18 @@ public final class PluginManagerCore {
     return new PluginException(errorMessage, cause, pluginId);
   }
 
-  @Nullable
-  public static PluginId getPluginByClassName(@NotNull String className) {
+  public static @Nullable PluginId getPluginByClassName(@NotNull String className) {
     PluginId id = getPluginOrPlatformByClassName(className);
     return (id == null || CORE_ID == id) ? null : id;
   }
 
-  @Nullable
-  public static PluginId getPluginOrPlatformByClassName(@NotNull String className) {
+  public static @Nullable PluginId getPluginOrPlatformByClassName(@NotNull String className) {
     PluginDescriptor result = getPluginDescriptorOrPlatformByClassName(className);
     return result == null ? null : result.getPluginId();
   }
 
-  @Nullable
   @ApiStatus.Internal
-  public static PluginDescriptor getPluginDescriptorOrPlatformByClassName(@NotNull String className) {
+  public static @Nullable PluginDescriptor getPluginDescriptorOrPlatformByClassName(@NotNull String className) {
     List<IdeaPluginDescriptorImpl> loadedPlugins = ourLoadedPlugins;
     if (loadedPlugins == null ||
         className.startsWith("java.") ||
@@ -550,8 +532,7 @@ public final class PluginManagerCore {
    * classes without declaring explicit dependency on the Java module. This method is intended to add implicit dependency on the Java plugin
    * for such plugins to avoid breaking compatibility with them.
    */
-  @Nullable
-  private static IdeaPluginDescriptorImpl getImplicitDependency(@NotNull IdeaPluginDescriptor descriptor,
+  private static @Nullable IdeaPluginDescriptorImpl getImplicitDependency(@NotNull IdeaPluginDescriptorImpl descriptor,
                                                                 @Nullable IdeaPluginDescriptorImpl javaDep,
                                                                 boolean hasAllModules) {
     // skip our plugins as expected to be up-to-date whether bundled or not
@@ -567,8 +548,13 @@ public final class PluginManagerCore {
     return hasModuleDependencies(descriptor) ? null : javaDep;
   }
 
-  static boolean hasModuleDependencies(@NotNull IdeaPluginDescriptor descriptor) {
-    for (PluginId depId : descriptor.getDependentPluginIds()) {
+  static boolean hasModuleDependencies(@NotNull IdeaPluginDescriptorImpl descriptor) {
+    if (descriptor.pluginDependencies == null) {
+      return false;
+    }
+
+    for (PluginDependency dependency : descriptor.pluginDependencies) {
+      PluginId depId = dependency.id;
       if (depId == JAVA_PLUGIN_ID || depId == JAVA_MODULE_ID || isModuleDependency(depId)) {
         return true;
       }
@@ -576,12 +562,11 @@ public final class PluginManagerCore {
     return false;
   }
 
-  @NotNull
-  private static ClassLoader createPluginClassLoader(ClassLoader @NotNull [] parentLoaders,
-                                                     @NotNull IdeaPluginDescriptorImpl descriptor,
-                                                     @NotNull UrlClassLoader.Builder urlLoaderBuilder,
-                                                     @NotNull ClassLoader coreLoader,
-                                                     @NotNull Map<String, String[]> additionalLayoutMap) {
+  private static @NotNull ClassLoader createPluginClassLoader(ClassLoader @NotNull [] parentLoaders,
+                                                              @NotNull IdeaPluginDescriptorImpl descriptor,
+                                                              @NotNull UrlClassLoader.Builder urlLoaderBuilder,
+                                                              @NotNull ClassLoader coreLoader,
+                                                              @NotNull Map<String, String[]> additionalLayoutMap) {
     List<Path> classPath = descriptor.jarFiles;
     if (classPath == null) {
       classPath = descriptor.collectClassPath(additionalLayoutMap);
@@ -622,8 +607,7 @@ public final class PluginManagerCore {
 
   private static @NotNull URL localFileToUrl(@NotNull Path file, @NotNull IdeaPluginDescriptor descriptor) {
     try {
-      // it is important not to have traversal elements in classpath
-      return new URL("file", "", file.normalize().toUri().getRawPath());
+      return file.normalize().toUri().toURL();  // it is important not to have traversal elements in classpath
     }
     catch (MalformedURLException e) {
       throw new PluginException("Corrupted path element: `" + file + '`', e, descriptor.getPluginId());
@@ -685,41 +669,89 @@ public final class PluginManagerCore {
   }
 
   private static void prepareLoadingPluginsErrorMessage(@NotNull List<PluginError> errors, @NotNull List<String> actions) {
-    if (errors.isEmpty()) {
-      return;
+    ourLoadingErrors = errors;
+    List<PluginError> errorsToReport = new ArrayList<>();
+    for (PluginError error : errors) {
+      if (error.isNotifyUser()) errorsToReport.add(error);
     }
 
+    // Log includes all messages, not only those which need to be reported to the user
     String message = "Problems found loading plugins:\n  " + errors.stream().map(PluginError::toString).collect(Collectors.joining("\n  "));
     Application app = ApplicationManager.getApplication();
     if (app == null || !app.isHeadlessEnvironment() || isUnitTestMode) {
-      String errorMessage = Stream.concat(errors.stream().map(o -> o.toUserError() + "."), actions.stream()).collect(Collectors.joining("<p/>"));
-      if (ourPluginError == null) {
-        ourPluginError = errorMessage;
-      }
-      else {
-        ourPluginError += "<p/>\n" + errorMessage;
+      if (!errorsToReport.isEmpty()) {
+        String errorMessage = Stream.concat(errorsToReport.stream().map(o -> o.toUserError() + "."), actions.stream()).collect(Collectors.joining("<p/>"));
+        if (ourPluginError == null) {
+          ourPluginError = errorMessage;
+        }
+        else {
+          ourPluginError += "<p/>\n" + errorMessage;
+        }
       }
 
       // as warn in tests
-      getLogger().warn(message);
+      if (!errors.isEmpty()) {
+        getLogger().warn(message);
+      }
     }
     else {
-      getLogger().error(message);
+      if (!errors.isEmpty()) {
+        getLogger().error(message);
+      }
     }
   }
 
-  @NotNull
-  private static CachingSemiGraph<IdeaPluginDescriptorImpl> createPluginIdGraph(@NotNull List<IdeaPluginDescriptorImpl> descriptors,
-                                                                                @NotNull Map<PluginId, IdeaPluginDescriptorImpl> idToDescriptorMap,
-                                                                                boolean withOptional) {
+  public static @Nullable String getLoadingError(@NotNull IdeaPluginDescriptor pluginDescriptor) {
+    PluginError error = findErrorForPlugin(ourLoadingErrors, pluginDescriptor.getPluginId());
+    if (error != null) {
+      String reason = error.getIncompatibleReason();
+      if (reason != null) {
+        return "Incompatible (" + reason + ")";
+      }
+      return error.getMessage();
+    }
+    return null;
+  }
+
+  public static @Nullable PluginId getFirstDisabledDependency(@NotNull IdeaPluginDescriptor pluginDescriptor) {
+    PluginError error = findErrorForPlugin(ourLoadingErrors, pluginDescriptor.getPluginId());
+    if (error != null) {
+      return error.getDisabledDependency();
+    }
+    return null;
+  }
+
+  private static @Nullable PluginError findErrorForPlugin(@Nullable List<PluginError> errors, @NotNull PluginId pluginId) {
+    if (errors == null) return null;
+    for (PluginError error : errors) {
+      if (error.plugin != null && error.plugin.getPluginId().equals(pluginId)) {
+        return error;
+      }
+    }
+    return null;
+  }
+
+  private static @NotNull CachingSemiGraph<IdeaPluginDescriptorImpl> createPluginIdGraph(@NotNull List<IdeaPluginDescriptorImpl> descriptors,
+                                                                                         @NotNull Map<PluginId, IdeaPluginDescriptorImpl> idToDescriptorMap,
+                                                                                         boolean withOptional) {
     IdeaPluginDescriptorImpl javaDep = idToDescriptorMap.get(JAVA_MODULE_ID);
     boolean hasAllModules = idToDescriptorMap.containsKey(ALL_MODULES_MARKER);
     Set<IdeaPluginDescriptorImpl> uniqueCheck = new HashSet<>();
     return new CachingSemiGraph<>(descriptors, rootDescriptor -> {
-      PluginId[] dependentPluginIds = rootDescriptor.getDependentPluginIds();
+      List<PluginDependency> dependencies = rootDescriptor.pluginDependencies;
+      if (dependencies == null) {
+        dependencies = Collections.emptyList();
+      }
+
       IdeaPluginDescriptorImpl implicitDep = getImplicitDependency(rootDescriptor, javaDep, hasAllModules);
-      PluginId[] optionalDependentPluginIds = withOptional ? rootDescriptor.getOptionalDependentPluginIds() : PluginId.EMPTY_ARRAY;
-      int capacity = dependentPluginIds.length - (withOptional ? 0 : optionalDependentPluginIds.length);
+      int capacity = dependencies.size();
+      if (!withOptional) {
+        for (PluginDependency dependency : dependencies) {
+          if (dependency.isOptional) {
+            capacity--;
+          }
+        }
+      }
       if (capacity == 0) {
         return implicitDep == null ? Collections.emptyList() : Collections.singletonList(implicitDep);
       }
@@ -737,20 +769,13 @@ public final class PluginManagerCore {
         }
       }
 
-      boolean excludeOptional = !withOptional && optionalDependentPluginIds.length > 0 && optionalDependentPluginIds.length != dependentPluginIds.length;
-
-      loop:
-      for (PluginId dependentPluginId : dependentPluginIds) {
-        if (excludeOptional) {
-          for (PluginId id : optionalDependentPluginIds) {
-            if (id == dependentPluginId) {
-              continue loop;
-            }
-          }
+      for (PluginDependency dependency : dependencies) {
+        if (!withOptional && dependency.isOptional) {
+          continue;
         }
 
         // check for missing optional dependency
-        IdeaPluginDescriptorImpl dep = idToDescriptorMap.get(dependentPluginId);
+        IdeaPluginDescriptorImpl dep = idToDescriptorMap.get(dependency.id);
         // if 'dep' refers to a module we need to check the real plugin containing this module only if it's still enabled,
         // otherwise the graph will be inconsistent
         if (dep == null) {
@@ -807,225 +832,43 @@ public final class PluginManagerCore {
     }
   }
 
-  private static @Nullable IdeaPluginDescriptorImpl loadDescriptorFromDir(@NotNull Path file,
-                                                                          @NotNull String descriptorRelativePath,
-                                                                          @Nullable Path pluginPath,
-                                                                          @NotNull DescriptorLoadingContext context) {
-    Path descriptorFile = file.resolve(descriptorRelativePath);
-    try {
-      IdeaPluginDescriptorImpl descriptor = new IdeaPluginDescriptorImpl(pluginPath == null ? file : pluginPath, context.isBundled);
-      Element element = JDOMUtil.load(descriptorFile, context.parentContext.getXmlFactory());
-      descriptor.readExternal(element, descriptorFile.getParent(), context.pathResolver, context, descriptor);
-      return descriptor;
-    }
-    catch (NoSuchFileException e) {
-      return null;
-    }
-    catch (SerializationException | JDOMException | IOException e) {
-      if (context.isEssential) {
-        ExceptionUtil.rethrow(e);
-      }
-      context.parentContext.result.reportCannotLoad(context.parentContext, file, e);
-    }
-    catch (Throwable e) {
-      if (context.isEssential) {
-        ExceptionUtil.rethrow(e);
-      }
-      context.parentContext.getLogger().warn("Cannot load " + descriptorFile, e);
-    }
-    return null;
-  }
-
   @Nullable
-  private static IdeaPluginDescriptorImpl loadDescriptorFromJar(@NotNull Path file,
-                                                                @NotNull String fileName,
-                                                                @NotNull PathBasedJdomXIncluder.PathResolver<?> pathResolver,
-                                                                @NotNull DescriptorLoadingContext context,
-                                                                @Nullable Path pluginPath) {
-    SafeJdomFactory factory = context.parentContext.getXmlFactory();
-    try {
-      Path metaInf = context.open(file).getPath("/META-INF");
-      Element element;
-      try {
-        element = JDOMUtil.load(metaInf.resolve(fileName), factory);
-      }
-      catch (NoSuchFileException ignore) {
-        return null;
-      }
-
-      IdeaPluginDescriptorImpl descriptor = new IdeaPluginDescriptorImpl(pluginPath == null ? file : pluginPath, context.isBundled);
-      if (descriptor.readExternal(element, metaInf, pathResolver, context, descriptor)) {
-        descriptor.jarFiles = Collections.singletonList(descriptor.getPluginPath());
-      }
-      return descriptor;
-    }
-    catch (SerializationException | InvalidDataException e) {
-      if (context.isEssential) {
-        ExceptionUtil.rethrow(e);
-      }
-      context.parentContext.result.reportCannotLoad(context.parentContext, file, e);
-    }
-    catch (Throwable e) {
-      if (context.isEssential) {
-        ExceptionUtil.rethrow(e);
-      }
-      context.parentContext.getLogger().info("Cannot load " + file + "!/META-INF/" + fileName, e);
-    }
-
-    return null;
-  }
-
-  /**
-   * @deprecated Use {@link PluginManager#loadDescriptor(Path, String)}
-   */
-  @Nullable
-  @Deprecated
-  public static IdeaPluginDescriptorImpl loadDescriptor(@NotNull File file, @NotNull String fileName) {
-    return PluginManager.loadDescriptor(file.toPath(), fileName, disabledPlugins(), false);
-  }
-
-  @ApiStatus.Internal
-  public static @Nullable IdeaPluginDescriptorImpl loadDescriptor(@NotNull Path file,
-                                                                   boolean isBundled,
-                                                                   @NotNull DescriptorListLoadingContext parentContext) {
-    try (DescriptorLoadingContext context = new DescriptorLoadingContext(parentContext, isBundled, /* isEssential = */ false,
-                                                                         PathBasedJdomXIncluder.DEFAULT_PATH_RESOLVER)) {
-      return loadDescriptorFromFileOrDir(file, PLUGIN_XML, context, Files.isDirectory(file));
-    }
-  }
-
-  @Nullable
-  static IdeaPluginDescriptorImpl loadDescriptorFromFileOrDir(@NotNull Path file, @NotNull String pathName, @NotNull DescriptorLoadingContext context, boolean isDirectory) {
-    if (isDirectory) {
-      return loadDescriptorFromDirAndNormalize(file, pathName, context);
-    }
-    else if (StringUtilRt.endsWithIgnoreCase(file.getFileName().toString(), ".jar")) {
-      return loadDescriptorFromJar(file, pathName, context.pathResolver, context, null);
-    }
-    else {
-      return null;
-    }
-  }
-
-  @Nullable
-  private static IdeaPluginDescriptorImpl loadDescriptorFromDirAndNormalize(@NotNull Path file,
-                                                                            @NotNull String pathName,
-                                                                            @NotNull DescriptorLoadingContext context) {
-    String descriptorRelativePath = META_INF + pathName;
-    IdeaPluginDescriptorImpl descriptor = loadDescriptorFromDir(file, descriptorRelativePath, null, context);
-    if (descriptor != null) return descriptor;
-
+  public static PathBasedJdomXIncluder.PathResolver<Path> createPluginJarsPathResolver(@NotNull Path pluginDir, @NotNull DescriptorLoadingContext context) {
     List<Path> pluginJarFiles = new ArrayList<>(), dirs = new ArrayList<>();
-    try (DirectoryStream<Path> s = Files.newDirectoryStream(file.resolve("lib"))) {
-      for (Path childFile : s) {
-        if (Files.isDirectory(childFile)) {
-          dirs.add(childFile);
+    if (!PluginDescriptorLoader.collectPluginDirectoryContents(pluginDir, pluginJarFiles, dirs)) return null;
+    return new PluginXmlPathResolver(pluginJarFiles, context);
+  }
+
+  public static void getDescriptorsToMigrate(@NotNull Path dir,
+                                             @Nullable BuildNumber compatibleBuildNumber,
+                                             @Nullable String bundledPluginsPath,
+                                             @Nullable Map<PluginId, Set<String>> brokenPluginVersions,
+                                             List<IdeaPluginDescriptorImpl> pluginsToMigrate,
+                                             List<IdeaPluginDescriptorImpl> incompatiblePlugins) throws ExecutionException, InterruptedException {
+    PluginLoadingResult loadingResult = new PluginLoadingResult(
+      brokenPluginVersions != null ? brokenPluginVersions : getBrokenPluginVersions(),
+      () -> compatibleBuildNumber == null ? getBuildNumber() : compatibleBuildNumber
+    );
+    DescriptorListLoadingContext context = new DescriptorListLoadingContext(0, Collections.emptySet(), loadingResult);
+    if (bundledPluginsPath != null) {
+      context.loadBundledPlugins = true;
+      context.bundledPluginsPath = bundledPluginsPath;
+    }
+    PluginDescriptorLoader.loadBundledDescriptorsAndDescriptorsFromDir(context, dir);
+
+    for (IdeaPluginDescriptorImpl descriptor : loadingResult.idMap.values()) {
+      if (!descriptor.isBundled()) {
+        if (loadingResult.isBroken(descriptor.getPluginId())) {
+          incompatiblePlugins.add(descriptor);
         }
         else {
-          String path = childFile.toString();
-          if (StringUtilRt.endsWithIgnoreCase(path, ".jar") || StringUtilRt.endsWithIgnoreCase(path, ".zip")) {
-            pluginJarFiles.add(childFile);
-          }
+          pluginsToMigrate.add(descriptor);
         }
       }
     }
-    catch (IOException e) {
-      return null;
-    }
-
-    if (!pluginJarFiles.isEmpty()) {
-      putMoreLikelyPluginJarsFirst(file, pluginJarFiles);
-
-      PluginXmlPathResolver pathResolver = new PluginXmlPathResolver(pluginJarFiles, context);
-      for (Path jarFile : pluginJarFiles) {
-        descriptor = loadDescriptorFromJar(jarFile, pathName, pathResolver, context, file);
-        if (descriptor != null) {
-          descriptor.jarFiles = pluginJarFiles;
-          return descriptor;
-        }
-      }
-    }
-
-    for (Path dir : dirs) {
-      IdeaPluginDescriptorImpl otherDescriptor = loadDescriptorFromDir(dir, descriptorRelativePath, file, context);
-      if (otherDescriptor != null) {
-        if (descriptor != null) {
-          context.parentContext.getLogger().info("Cannot load " + file + " because two or more plugin.xml's detected");
-          return null;
-        }
-        descriptor = otherDescriptor;
-      }
-    }
-
-    return descriptor;
-  }
-
-  /*
-   * Sort the files heuristically to load the plugin jar containing plugin descriptors without extra ZipFile accesses
-   * File name preference:
-   * a) last order for files with resources in name, like resources_en.jar
-   * b) last order for files that have -digit suffix is the name e.g. completion-ranking.jar is before gson-2.8.0.jar or junit-m5.jar
-   * c) jar with name close to plugin's directory name, e.g. kotlin-XXX.jar is before all-open-XXX.jar
-   * d) shorter name, e.g. android.jar is before android-base-common.jar
-   */
-  private static void putMoreLikelyPluginJarsFirst(@NotNull Path pluginDir, @NotNull List<Path> filesInLibUnderPluginDir) {
-    String pluginDirName = pluginDir.getFileName().toString();
-
-    filesInLibUnderPluginDir.sort((o1, o2) -> {
-      String o2Name = o2.getFileName().toString();
-      String o1Name = o1.getFileName().toString();
-
-      boolean o2StartsWithResources = o2Name.startsWith("resources");
-      boolean o1StartsWithResources = o1Name.startsWith("resources");
-      if (o2StartsWithResources != o1StartsWithResources) {
-        return o2StartsWithResources ? -1 : 1;
-      }
-
-      boolean o2IsVersioned = fileNameIsLikeVersionedLibraryName(o2Name);
-      boolean o1IsVersioned = fileNameIsLikeVersionedLibraryName(o1Name);
-      if (o2IsVersioned != o1IsVersioned) {
-        return o2IsVersioned ? -1 : 1;
-      }
-
-      boolean o2StartsWithNeededName = StringUtil.startsWithIgnoreCase(o2Name, pluginDirName);
-      boolean o1StartsWithNeededName = StringUtil.startsWithIgnoreCase(o1Name, pluginDirName);
-      if (o2StartsWithNeededName != o1StartsWithNeededName) {
-        return o2StartsWithNeededName ? 1 : -1;
-      }
-
-      return o1Name.length() - o2Name.length();
-    });
-  }
-
-  private static boolean fileNameIsLikeVersionedLibraryName(@NotNull String name) {
-    int i = name.lastIndexOf('-');
-    if (i == -1) return false;
-    if (i + 1 < name.length()) {
-      char c = name.charAt(i + 1);
-      if (Character.isDigit(c)) return true;
-      return (c == 'm' || c == 'M') && i + 2 < name.length() && Character.isDigit(name.charAt(i + 2));
-    }
-    return false;
-  }
-
-  private static void loadDescriptorsFromDir(@NotNull Path dir,
-                                             boolean isBundled,
-                                             @NotNull DescriptorListLoadingContext context) throws ExecutionException, InterruptedException {
-    List<Future<IdeaPluginDescriptorImpl>> tasks = new ArrayList<>();
-    ExecutorService executorService = context.getExecutorService();
-    try (DirectoryStream<Path> dirStream = Files.newDirectoryStream(dir)) {
-      for (Path file : dirStream) {
-        tasks.add(executorService.submit(() -> loadDescriptor(file, isBundled, context)));
-      }
-    }
-    catch (IOException ignore) {
-      return;
-    }
-
-    for (Future<IdeaPluginDescriptorImpl> task : tasks) {
-      IdeaPluginDescriptorImpl descriptor = task.get();
-      if (descriptor != null) {
-        context.result.add(descriptor, context, /* overrideUseIfCompatible = */ false);
+    for (IdeaPluginDescriptorImpl descriptor : loadingResult.incompletePlugins.values()) {
+      if (!descriptor.isBundled()) {
+        incompatiblePlugins.add(descriptor);
       }
     }
   }
@@ -1060,157 +903,15 @@ public final class PluginManagerCore {
   public static @NotNull List<? extends IdeaPluginDescriptor> testLoadDescriptorsFromClassPath(@NotNull ClassLoader loader)
     throws ExecutionException, InterruptedException {
     Map<URL, String> urlsFromClassPath = new LinkedHashMap<>();
-    collectPluginFilesInClassPath(loader, urlsFromClassPath);
-    DescriptorListLoadingContext context = new DescriptorListLoadingContext(0, Collections.emptySet(), new PluginLoadingResult(Collections.emptyMap(), BuildNumber.currentVersion(), false));
+    PluginDescriptorLoader.collectPluginFilesInClassPath(loader, urlsFromClassPath);
+    BuildNumber buildNumber = BuildNumber.fromString("2042.42");
+    DescriptorListLoadingContext context = new DescriptorListLoadingContext(0, Collections.emptySet(), new PluginLoadingResult(Collections.emptyMap(), () -> buildNumber, false));
     try (DescriptorLoadingContext loadingContext = new DescriptorLoadingContext(context, true, true, new ClassPathXmlPathResolver(loader))) {
-      loadDescriptorsFromClassPath(urlsFromClassPath, loadingContext, null);
+      PluginDescriptorLoader.loadDescriptorsFromClassPath(urlsFromClassPath, loadingContext, null);
     }
 
     context.result.finishLoading();
     return context.result.getEnabledPlugins();
-  }
-
-  private static void loadDescriptorsFromClassPath(@NotNull Map<URL, String> urls,
-                                                   @NotNull DescriptorLoadingContext context,
-                                                   @Nullable URL platformPluginURL) throws ExecutionException, InterruptedException {
-    if (urls.isEmpty()) {
-      return;
-    }
-
-    List<Future<IdeaPluginDescriptorImpl>> tasks = new ArrayList<>(urls.size());
-    ExecutorService executorService = context.parentContext.getExecutorService();
-    for (Map.Entry<URL, String> entry : urls.entrySet()) {
-      URL url = entry.getKey();
-      tasks.add(executorService.submit(() -> loadDescriptorFromResource(url, entry.getValue(), context.copy(url.equals(platformPluginURL)))));
-    }
-
-    PluginLoadingResult result = context.parentContext.result;
-    for (Future<IdeaPluginDescriptorImpl> task : tasks) {
-      IdeaPluginDescriptorImpl descriptor = task.get();
-      if (descriptor != null) {
-        if (!usePluginClassLoader) descriptor.setUseCoreClassLoader();
-        result.add(descriptor, context.parentContext, /* overrideUseIfCompatible = */ false);
-      }
-    }
-  }
-
-  @Nullable
-  private static URL computePlatformPluginUrlAndCollectPluginUrls(@NotNull ClassLoader loader, @NotNull Map<URL, String> urls) {
-    String platformPrefix = System.getProperty(PlatformUtils.PLATFORM_PREFIX_KEY);
-    URL result = null;
-    if (platformPrefix != null) {
-      // should be the only plugin in lib (only for Ultimate and WebStorm for now)
-      if ((platformPrefix.equals(PlatformUtils.IDEA_PREFIX) || platformPrefix.equals(PlatformUtils.WEB_PREFIX)) && !isRunningFromSources()) {
-        urls.put(loader.getResource(PLUGIN_XML_PATH), PLUGIN_XML);
-        return null;
-      }
-
-      String fileName = platformPrefix + "Plugin.xml";
-      URL resource = loader.getResource(META_INF + fileName);
-      if (resource != null) {
-        urls.put(resource, fileName);
-        result = resource;
-      }
-    }
-    collectPluginFilesInClassPath(loader, urls);
-    return result;
-  }
-
-  private static void collectPluginFilesInClassPath(@NotNull ClassLoader loader, @NotNull Map<URL, String> urls) {
-    try {
-      Enumeration<URL> enumeration = loader.getResources(PLUGIN_XML_PATH);
-      while (enumeration.hasMoreElements()) {
-        urls.put(enumeration.nextElement(), PLUGIN_XML);
-      }
-    }
-    catch (IOException e) {
-      getLogger().info(e);
-    }
-  }
-
-  @Nullable
-  private static IdeaPluginDescriptorImpl loadDescriptorFromResource(@NotNull URL resource, @NotNull String pathName, @NotNull DescriptorLoadingContext loadingContext) {
-    try {
-      Path file;
-      if (URLUtil.FILE_PROTOCOL.equals(resource.getProtocol())) {
-        file = Paths.get(StringUtil.trimEnd(FileUtilRt.toSystemIndependentName(urlToFile(resource).toString()), pathName)).getParent();
-        return loadDescriptorFromFileOrDir(file, pathName, loadingContext, Files.isDirectory(file));
-      }
-      else if (URLUtil.JAR_PROTOCOL.equals(resource.getProtocol())) {
-        String path = resource.getFile();
-        file = urlToFile(path.substring(0, path.indexOf(URLUtil.JAR_SEPARATOR)));
-        return loadDescriptorFromJar(file, pathName, loadingContext.pathResolver, loadingContext, null);
-      }
-      else {
-        return null;
-      }
-    }
-    catch (Throwable e) {
-      if (loadingContext.isEssential) {
-        ExceptionUtil.rethrow(e);
-      }
-      loadingContext.parentContext.getLogger().info("Cannot load " + resource, e);
-      return null;
-    }
-    finally {
-      loadingContext.close();
-    }
-  }
-
-  // work around corrupted URLs produced by File.getURL()
-  @NotNull
-  private static Path urlToFile(@NotNull String url) throws URISyntaxException {
-    try {
-      return Paths.get(new URI(url));
-    }
-    catch (URISyntaxException e) {
-      if (url.indexOf(' ') > 0) {
-        return Paths.get(new URI(StringUtil.replace(url, " ", "%20")));
-      }
-      throw e;
-    }
-  }
-
-  // work around corrupted URLs produced by File.getURL()
-  @NotNull
-  private static Path urlToFile(URL url) throws URISyntaxException, MalformedURLException {
-    try {
-      return Paths.get(url.toURI());
-    }
-    catch (URISyntaxException e) {
-      String str = url.toString();
-      if (str.indexOf(' ') > 0) {
-        return Paths.get(new URL(StringUtil.replace(str, " ", "%20")).toURI());
-      }
-      throw e;
-    }
-  }
-
-  private static void loadDescriptorsFromProperty(@NotNull PluginLoadingResult result,
-                                                  @NotNull DescriptorListLoadingContext context) {
-    String pathProperty = System.getProperty(PROPERTY_PLUGIN_PATH);
-    if (pathProperty == null) {
-      return;
-    }
-
-    for (StringTokenizer t = new StringTokenizer(pathProperty, File.pathSeparator + ","); t.hasMoreTokens(); ) {
-      String s = t.nextToken();
-      IdeaPluginDescriptorImpl descriptor = loadDescriptor(Paths.get(s), false, context);
-      if (descriptor != null) {
-        // plugins added via property shouldn't be overridden to avoid plugin root detection issues when running external plugin tests
-        result.add(descriptor, context, /* overrideUseIfCompatible = */ true);
-      }
-    }
-  }
-
-  /**
-   * Think twice before use and get approve from core team.
-   *
-   * Returns enabled plugins only.
-   */
-  @ApiStatus.Internal
-  public static @NotNull List<? extends IdeaPluginDescriptor> loadUncachedDescriptors() {
-    return loadDescriptors().result.getEnabledPlugins();
   }
 
   public static void scheduleDescriptorLoading() {
@@ -1225,7 +926,7 @@ public final class PluginManagerCore {
 
     future = CompletableFuture.supplyAsync(() -> {
       Activity activity = StartUpMeasurer.startActivity("plugin descriptor loading");
-      DescriptorListLoadingContext context = loadDescriptors();
+      DescriptorListLoadingContext context = PluginDescriptorLoader.loadDescriptors();
       activity.end();
       return context;
     }, AppExecutorUtil.getAppExecutorService());
@@ -1253,50 +954,8 @@ public final class PluginManagerCore {
     });
   }
 
-  @ApiStatus.Internal
-  private static @NotNull DescriptorListLoadingContext loadDescriptors() {
-    PluginLoadingResult result = new PluginLoadingResult(getBrokenPluginVersions(), getBuildNumber());
-    Map<URL, String> urlsFromClassPath = new LinkedHashMap<>();
-    ClassLoader classLoader = PluginManagerCore.class.getClassLoader();
-    URL platformPluginURL = computePlatformPluginUrlAndCollectPluginUrls(classLoader, urlsFromClassPath);
-    int flags = DescriptorListLoadingContext.IS_PARALLEL;
-    boolean isUnitTestMode = PluginManagerCore.isUnitTestMode;
-    if (isUnitTestMode) {
-      flags |= DescriptorListLoadingContext.IGNORE_MISSING_INCLUDE;
-    }
-    if (isUnitTestMode || isRunningFromSources()) {
-      flags |= DescriptorListLoadingContext.CHECK_OPTIONAL_CONFIG_NAME_UNIQUENESS;
-    }
-
-    DescriptorListLoadingContext context = new DescriptorListLoadingContext(flags, disabledPlugins(), result);
-    try {
-      try (DescriptorLoadingContext loadingContext = new DescriptorLoadingContext(context, /* isBundled = */ true, /* isEssential, doesn't matter = */ true, new ClassPathXmlPathResolver(classLoader))) {
-        loadDescriptorsFromClassPath(urlsFromClassPath, loadingContext, platformPluginURL);
-      }
-
-      loadDescriptorsFromDir(Paths.get(PathManager.getPluginsPath()), /* isBundled = */ false, context);
-
-      if (!isUnitTestMode) {
-        loadDescriptorsFromDir(Paths.get(PathManager.getPreInstalledPluginsPath()), /* isBundled = */ true, context);
-      }
-
-      loadDescriptorsFromProperty(result, context);
-
-      if (isUnitTestMode && result.enabledPluginCount() <= 1) {
-        // we're running in unit test mode, but the classpath doesn't contain any plugins; try to load bundled plugins anyway
-        context.usePluginClassLoader = true;
-        loadDescriptorsFromDir(Paths.get(PathManager.getPreInstalledPluginsPath()), /* isBundled = */ true, context);
-      }
-    }
-    catch (InterruptedException | ExecutionException e) {
-      throw new RuntimeException(e);
-    }
-    finally {
-      context.close();
-    }
-
-    context.result.finishLoading();
-    return context;
+  static @NotNull PluginLoadingResult createLoadingResult(@Nullable BuildNumber buildNumber) {
+    return new PluginLoadingResult(getBrokenPluginVersions(), () -> buildNumber == null ? getBuildNumber() : buildNumber);
   }
 
   private static void mergeOptionalConfigs(@NotNull List<IdeaPluginDescriptorImpl> enabledPlugins,
@@ -1304,76 +963,72 @@ public final class PluginManagerCore {
     if (isRunningFromSources()) {
       // fix optional configs
       for (IdeaPluginDescriptorImpl descriptor : enabledPlugins) {
-        if (!descriptor.isUseCoreClassLoader() || descriptor.optionalConfigs == null) {
+        if (!descriptor.isUseCoreClassLoader() || descriptor.pluginDependencies == null) {
           continue;
         }
 
-        descriptor.optionalConfigs.forEach((id, entries) -> {
-          IdeaPluginDescriptorImpl dependent = idMap.get(id);
-          if (dependent != null && !dependent.isUseCoreClassLoader()) {
-            entries.clear();
+        for (PluginDependency dependency : descriptor.pluginDependencies) {
+          if (dependency.subDescriptor == null) {
+            continue;
           }
-        });
+
+          IdeaPluginDescriptorImpl dependent = idMap.get(dependency.id);
+          if (dependent != null && !dependent.isUseCoreClassLoader()) {
+            // for what?
+            dependency.subDescriptor = null;
+          }
+        }
       }
     }
 
-    for (IdeaPluginDescriptorImpl rootDescriptor : enabledPlugins) {
-      mergeOptionalDescriptors(rootDescriptor, rootDescriptor, idMap);
-    }
-
-    for (IdeaPluginDescriptorImpl descriptor : enabledPlugins) {
-      descriptor.optionalConfigs = null;
+    for (IdeaPluginDescriptorImpl mainDescriptor : enabledPlugins) {
+      List<PluginDependency> pluginDependencies = mainDescriptor.pluginDependencies;
+      if (pluginDependencies != null) {
+        mergeOptionalDescriptors(mainDescriptor, pluginDependencies, idMap);
+      }
     }
   }
 
   private static void mergeOptionalDescriptors(@NotNull IdeaPluginDescriptorImpl mergedDescriptor,
-                                               @NotNull IdeaPluginDescriptorImpl rootDescriptor,
+                                               @NotNull List<PluginDependency> pluginDependencies,
                                                @NotNull Map<PluginId, IdeaPluginDescriptorImpl> idMap) {
-    Map<PluginId, List<IdeaPluginDescriptorImpl>> optionalDescriptors = rootDescriptor.optionalConfigs;
-    if (optionalDescriptors == null) {
-      return;
-    }
+    loop:
+    for (PluginDependency dependency : pluginDependencies) {
+      IdeaPluginDescriptorImpl subDescriptor = dependency.subDescriptor;
+      dependency.subDescriptor = null;
 
-    optionalDescriptors.forEach((dependencyId, entries) -> {
-      IdeaPluginDescriptorImpl dependencyDescriptor = idMap.get(dependencyId);
-      if (dependencyDescriptor == null || !dependencyDescriptor.isEnabled()) {
-        return;
+      if (subDescriptor == null || dependency.isDisabledOrBroken) {
+        continue;
       }
 
-      loop:
-      for (IdeaPluginDescriptorImpl descriptor : entries) {
-        // check that plugin doesn't depend on unavailable plugin
-        for (PluginId id : descriptor.getDependentPluginIds()) {
-          IdeaPluginDescriptorImpl dependentDescriptor = idMap.get(id);
+      IdeaPluginDescriptorImpl dependencyDescriptor = idMap.get(dependency.id);
+      if (dependencyDescriptor == null || !dependencyDescriptor.isEnabled()) {
+        continue;
+      }
+
+      // check that plugin doesn't depend on unavailable plugin
+      if (subDescriptor.pluginDependencies != null) {
+        for (PluginDependency pluginDependency : subDescriptor.pluginDependencies) {
           // ignore if optional
-          if ((dependentDescriptor == null || !dependentDescriptor.isEnabled()) && !isOptional(descriptor, id)) {
-            continue loop;
+          if (!pluginDependency.isOptional) {
+            if (pluginDependency.isDisabledOrBroken) {
+              continue loop;
+            }
+
+            IdeaPluginDescriptorImpl dependentDescriptor = idMap.get(pluginDependency.id);
+            if (dependentDescriptor == null || !dependentDescriptor.isEnabled()) {
+              continue loop;
+            }
           }
         }
-
-        mergedDescriptor.mergeOptionalConfig(descriptor);
-        mergeOptionalDescriptors(mergedDescriptor, descriptor, idMap);
       }
-    });
-  }
 
-  private static boolean isOptional(@NotNull IdeaPluginDescriptorImpl descriptor, @NotNull PluginId id) {
-    PluginId[] optional = descriptor.getOptionalDependentPluginIds();
-    if (optional.length == 0) {
-      // all are required, so, this one also required
-      return false;
-    }
-    if (optional.length == descriptor.getDependentPluginIds().length) {
-      // all are optional, so, this one also optional
-      return true;
-    }
-
-    for (PluginId otherId : optional) {
-      if (id == otherId) {
-        return true;
+      mergedDescriptor.mergeOptionalConfig(subDescriptor);
+      List<PluginDependency> childDependencies = subDescriptor.pluginDependencies;
+      if (childDependencies != null) {
+        mergeOptionalDescriptors(mergedDescriptor, childDependencies, idMap);
       }
     }
-    return false;
   }
 
   private static @NotNull Map<String, String[]> loadAdditionalLayoutMap() {
@@ -1431,13 +1086,11 @@ public final class PluginManagerCore {
     rootDescriptor.setLoader(createPluginClassLoader(array, rootDescriptor, createUrlClassLoaderBuilder(), PluginManagerCore.class.getClassLoader(), ourAdditionalLayoutMap));
   }
 
-  @NotNull
-  private static UrlClassLoader.Builder createUrlClassLoaderBuilder() {
+  private static @NotNull UrlClassLoader.Builder createUrlClassLoaderBuilder() {
     return UrlClassLoader.build().allowLock().useCache().urlsInterned();
   }
 
-  @NotNull
-  static BuildNumber getBuildNumber() {
+  static @NotNull BuildNumber getBuildNumber() {
     BuildNumber result = ourBuildNumber;
     if (result == null) {
       result = BuildNumber.fromString(getPluginsCompatibleBuild());
@@ -1463,11 +1116,14 @@ public final class PluginManagerCore {
   private static void disableIncompatiblePlugins(@NotNull List<IdeaPluginDescriptorImpl> descriptors,
                                                  @NotNull Map<PluginId, IdeaPluginDescriptorImpl> idMap,
                                                  @NotNull List<PluginError> errors) {
+    if (ourDisableNonBundledPlugins) {
+      getLogger().info("Running with disableThirdPartyPlugins argument, third-party plugins will be disabled");
+    }
     String selectedIds = System.getProperty("idea.load.plugins.id");
     String selectedCategory = System.getProperty("idea.load.plugins.category");
 
     IdeaPluginDescriptorImpl coreDescriptor = idMap.get(CORE_ID);
-    Set<IdeaPluginDescriptor> explicitlyEnabled = null;
+    Set<IdeaPluginDescriptorImpl> explicitlyEnabled = null;
     if (selectedIds != null) {
       Set<PluginId> set = new HashSet<>();
       List<String> strings = StringUtil.split(selectedIds, ",");
@@ -1486,7 +1142,7 @@ public final class PluginManagerCore {
     }
     else if (selectedCategory != null) {
       explicitlyEnabled = new LinkedHashSet<>();
-      for (IdeaPluginDescriptor descriptor : descriptors) {
+      for (IdeaPluginDescriptorImpl descriptor : descriptors) {
         if (selectedCategory.equals(descriptor.getCategory())) {
           explicitlyEnabled.add(descriptor);
         }
@@ -1495,9 +1151,9 @@ public final class PluginManagerCore {
 
     if (explicitlyEnabled != null) {
       // add all required dependencies
-      Set<IdeaPluginDescriptor> finalExplicitlyEnabled = explicitlyEnabled;
+      Set<IdeaPluginDescriptorImpl> finalExplicitlyEnabled = explicitlyEnabled;
       Set<IdeaPluginDescriptor> depProcessed = new HashSet<>();
-      for (IdeaPluginDescriptor descriptor : new ArrayList<>(explicitlyEnabled)) {
+      for (IdeaPluginDescriptorImpl descriptor : new ArrayList<>(explicitlyEnabled)) {
         processAllDependencies(descriptor, false, idMap, depProcessed, (id, dependency) -> {
           finalExplicitlyEnabled.add(dependency);
           return FileVisitResult.CONTINUE;
@@ -1505,13 +1161,19 @@ public final class PluginManagerCore {
       }
     }
 
+    Map<PluginId, Set<String>> brokenPluginVersions = getBrokenPluginVersions();
     boolean shouldLoadPlugins = Boolean.parseBoolean(System.getProperty("idea.load.plugins", "true"));
     for (IdeaPluginDescriptorImpl descriptor : descriptors) {
       if (descriptor == coreDescriptor) {
         continue;
       }
 
-      if (explicitlyEnabled != null) {
+      Set<String> set = brokenPluginVersions.get(descriptor.getPluginId());
+      if (set != null && set.contains(descriptor.getVersion())) {
+        descriptor.setEnabled(false);
+        errors.add(new PluginError(descriptor, "was marked as broken", "marked as broken"));
+      }
+      else if (explicitlyEnabled != null) {
         if (!explicitlyEnabled.contains(descriptor)) {
           descriptor.setEnabled(false);
           getLogger().info("Plugin " + toPresentableName(descriptor) + " " +
@@ -1523,6 +1185,10 @@ public final class PluginManagerCore {
       else if (!shouldLoadPlugins) {
         descriptor.setEnabled(false);
         errors.add(new PluginError(descriptor, "is skipped (plugins loading disabled)", null));
+      }
+      else if (!descriptor.isBundled() && ourDisableNonBundledPlugins) {
+        descriptor.setEnabled(false);
+        errors.add(new PluginError(descriptor, "is skipped (third-party plugins loading disabled)", null, false));
       }
     }
   }
@@ -1539,19 +1205,14 @@ public final class PluginManagerCore {
     return isIncompatible(descriptor, getBuildNumber());
   }
 
-  @Nullable
-  public static String getIncompatible(@NotNull IdeaPluginDescriptor descriptor) {
-    return isIncompatible(getBuildNumber(), descriptor.getSinceBuild(), descriptor.getUntilBuild());
-  }
-
   public static boolean isIncompatible(@NotNull IdeaPluginDescriptor descriptor, @Nullable BuildNumber buildNumber) {
     if (buildNumber == null) {
       buildNumber = getBuildNumber();
     }
-    return isIncompatible(buildNumber, descriptor.getSinceBuild(), descriptor.getUntilBuild()) != null;
+    return getIncompatibleMessage(buildNumber, descriptor.getSinceBuild(), descriptor.getUntilBuild()) != null;
   }
 
-  static @Nullable String isIncompatible(@NotNull BuildNumber buildNumber, @Nullable String sinceBuild, @Nullable String untilBuild) {
+  static @Nullable String getIncompatibleMessage(@NotNull BuildNumber buildNumber, @Nullable String sinceBuild, @Nullable String untilBuild) {
     try {
       String message = null;
       BuildNumber sinceBuildNumber = sinceBuild == null ? null : BuildNumber.fromString(sinceBuild, null, null);
@@ -1722,9 +1383,8 @@ public final class PluginManagerCore {
     return sortedRequired;
   }
 
-  @NotNull
   @ApiStatus.Internal
-  public static Map<PluginId, IdeaPluginDescriptorImpl> buildPluginIdMap(@NotNull List<IdeaPluginDescriptorImpl> descriptors) {
+  public static @NotNull Map<PluginId, IdeaPluginDescriptorImpl> buildPluginIdMap(@NotNull List<IdeaPluginDescriptorImpl> descriptors) {
     Map<PluginId, IdeaPluginDescriptorImpl> idMap = new LinkedHashMap<>(descriptors.size());
     Map<PluginId, List<IdeaPluginDescriptorImpl>> duplicateMap = null;
     for (IdeaPluginDescriptorImpl descriptor : descriptors) {
@@ -1745,14 +1405,16 @@ public final class PluginManagerCore {
   }
 
   @SuppressWarnings("DuplicatedCode")
-  @Nullable
-  private static Map<PluginId, List<IdeaPluginDescriptorImpl>> checkAndPut(@NotNull IdeaPluginDescriptorImpl descriptor,
-                                                                           @NotNull PluginId id,
-                                                                           @NotNull Map<PluginId, IdeaPluginDescriptorImpl> idMap,
-                                                                           @Nullable Map<PluginId, List<IdeaPluginDescriptorImpl>> duplicateMap) {
-    if (duplicateMap != null && duplicateMap.containsKey(id)) {
-      ContainerUtilRt.putValue(id, descriptor, duplicateMap);
-      return duplicateMap;
+  private static @Nullable Map<PluginId, List<IdeaPluginDescriptorImpl>> checkAndPut(@NotNull IdeaPluginDescriptorImpl descriptor,
+                                                                                     @NotNull PluginId id,
+                                                                                     @NotNull Map<PluginId, IdeaPluginDescriptorImpl> idMap,
+                                                                                     @Nullable Map<PluginId, List<IdeaPluginDescriptorImpl>> duplicateMap) {
+    if (duplicateMap != null) {
+      List<IdeaPluginDescriptorImpl> duplicates = duplicateMap.get(id);
+      if (duplicates != null) {
+        duplicates.add(descriptor);
+        return duplicateMap;
+      }
     }
 
     IdeaPluginDescriptorImpl existingDescriptor = idMap.put(id, descriptor);
@@ -1783,14 +1445,15 @@ public final class PluginManagerCore {
       return true;
     }
 
-    // no deps at all or all are optional
-    if (descriptor.getDependentPluginIds().length == descriptor.getOptionalDependentPluginIds().length) {
+    // no deps at all
+    if (descriptor.pluginDependencies == null) {
       return true;
     }
 
     boolean result = true;
-    for (PluginId depId : descriptor.getDependentPluginIds()) {
-      if (loadedIds.contains(depId) || isOptional(descriptor, depId)) {
+    for (PluginDependency dependency : descriptor.pluginDependencies) {
+      PluginId depId = dependency.id;
+      if (dependency.isOptional || loadedIds.contains(depId)) {
         continue;
       }
 
@@ -1803,10 +1466,17 @@ public final class PluginManagerCore {
 
       String depName = dep == null ? null : dep.getName();
       if (depName == null) {
-        errors.add(new PluginError(descriptor, "requires " + toPresentableName(depId.getIdString()) + " plugin to be installed", null));
+        if (findErrorForPlugin(errors, depId) != null) {
+          errors.add(new PluginError(descriptor, "depends on plugin " + toPresentableName(depId.getIdString()) + " that failed to load", null));
+        }
+        else {
+          errors.add(new PluginError(descriptor, "requires " + toPresentableName(depId.getIdString()) + " plugin to be installed", null));
+        }
       }
       else {
-        errors.add(new PluginError(descriptor, "requires " + toPresentableName(depName) + " plugin to be enabled", null));
+        PluginError error = new PluginError(descriptor, "requires " + toPresentableName(depName) + " plugin to be enabled", null);
+        error.setDisabledDependency(dep.getPluginId());
+        errors.add(error);
       }
     }
     return result;
@@ -1816,8 +1486,7 @@ public final class PluginManagerCore {
     return toPresentableName(descriptor == null ? null : descriptor.getName());
   }
 
-  @NotNull
-  private static String toPresentableName(@Nullable String s) {
+  private static @NotNull String toPresentableName(@Nullable String s) {
     return "\"" + (s == null ? "" : s) + "\"";
   }
 
@@ -1829,27 +1498,30 @@ public final class PluginManagerCore {
    *
    * @param pluginRoot jar file or directory which contains the configuration file
    * @param fileName   name of the configuration file located in 'META-INF' directory under {@code pluginRoot}
-   * @param area       area which extension points and extensions should be registered (e.g. {@link Extensions#getRootArea()} for application-level extensions)
+   * @param area       area which extension points and extensions should be registered (e.g. {@link com.intellij.openapi.components.ComponentManager#getRootArea()} for application-level extensions)
    */
   public static void registerExtensionPointAndExtensions(@NotNull Path pluginRoot, @NotNull String fileName, @NotNull ExtensionsArea area) {
     IdeaPluginDescriptorImpl descriptor;
     DescriptorListLoadingContext parentContext = DescriptorListLoadingContext.createSingleDescriptorContext(disabledPlugins());
     try (DescriptorLoadingContext context = new DescriptorLoadingContext(parentContext, true, true, PathBasedJdomXIncluder.DEFAULT_PATH_RESOLVER)) {
       if (Files.isDirectory(pluginRoot)) {
-        descriptor = loadDescriptorFromDir(pluginRoot, META_INF + fileName, null, context);
+        descriptor = PluginDescriptorLoader.loadDescriptorFromDir(pluginRoot, META_INF + fileName, null, context);
       }
       else {
-        descriptor = loadDescriptorFromJar(pluginRoot, fileName, PathBasedJdomXIncluder.DEFAULT_PATH_RESOLVER, context, null);
+        descriptor = PluginDescriptorLoader.loadDescriptorFromJar(pluginRoot, fileName, PathBasedJdomXIncluder.DEFAULT_PATH_RESOLVER, context, null);
       }
     }
 
-    if (descriptor != null) {
-      descriptor.registerExtensionPoints((ExtensionsAreaImpl)area, ApplicationManager.getApplication());
-      descriptor.registerExtensions((ExtensionsAreaImpl)area, ApplicationManager.getApplication(), false);
-    }
-    else {
+    if (descriptor == null) {
       getLogger().error("Cannot load " + fileName + " from " + pluginRoot);
+      return;
     }
+
+    List<ExtensionPointImpl<?>> extensionPoints = descriptor.appContainerDescriptor.extensionPoints;
+    if (extensionPoints != null) {
+      ((ExtensionsAreaImpl)area).registerExtensionPoints(extensionPoints, false);
+    }
+    descriptor.registerExtensions((ExtensionsAreaImpl)area, descriptor, descriptor.appContainerDescriptor, null);
   }
 
   @SuppressWarnings("NonPrivateFieldAccessedInSynchronizedContext")
@@ -1862,7 +1534,7 @@ public final class PluginManagerCore {
 
     try {
       if (context == null) {
-        context = loadDescriptors();
+        context = PluginDescriptorLoader.loadDescriptors();
       }
       Activity activity = StartUpMeasurer.startActivity("plugin initialization");
       PluginManagerState initResult = initializePlugins(context, coreLoader, !isUnitTestMode);
@@ -1895,6 +1567,7 @@ public final class PluginManagerCore {
     }
   }
 
+  @SuppressWarnings("RedundantSuppression")
   public static @NotNull Logger getLogger() {
     // do not use class reference here
     //noinspection SSBasedInspection
@@ -1905,7 +1578,7 @@ public final class PluginManagerCore {
     public final List<String> pluginIds;
 
     EssentialPluginMissingException(@NotNull List<String> ids) {
-      super("Missing essential plugins: " + StringUtil.join(ids, ", "));
+      super("Missing essential plugins: " + String.join(", ", ids));
 
       pluginIds = ids;
     }
@@ -1953,22 +1626,23 @@ public final class PluginManagerCore {
    */
   @SuppressWarnings("UnusedReturnValue")
   @ApiStatus.Internal
-  public static boolean processAllDependencies(@NotNull IdeaPluginDescriptor rootDescriptor,
+  public static boolean processAllDependencies(@NotNull IdeaPluginDescriptorImpl rootDescriptor,
                                                boolean withOptionalDeps,
                                                @NotNull Function<IdeaPluginDescriptor, FileVisitResult> consumer) {
     return processAllDependencies(rootDescriptor, withOptionalDeps, buildPluginIdMap(), consumer);
   }
 
   @ApiStatus.Internal
-  public static boolean processAllDependencies(@NotNull IdeaPluginDescriptor rootDescriptor,
+  public static boolean processAllDependencies(@NotNull IdeaPluginDescriptorImpl rootDescriptor,
                                                boolean withOptionalDeps,
                                                @NotNull Map<PluginId, IdeaPluginDescriptorImpl> idToMap,
                                                @NotNull Function<IdeaPluginDescriptor, FileVisitResult> consumer) {
     return processAllDependencies(rootDescriptor, withOptionalDeps, idToMap, new HashSet<>(), (id, descriptor) -> descriptor != null ? consumer.apply(descriptor) : FileVisitResult.SKIP_SUBTREE);
   }
 
+  @SuppressWarnings("UnusedReturnValue")
   @ApiStatus.Internal
-  public static boolean processAllDependencies(@NotNull IdeaPluginDescriptor rootDescriptor,
+  public static boolean processAllDependencies(@NotNull IdeaPluginDescriptorImpl rootDescriptor,
                                                boolean withOptionalDeps,
                                                @NotNull Map<PluginId, IdeaPluginDescriptorImpl> idToMap,
                                                @NotNull BiFunction<? super @NotNull PluginId, ? super @Nullable IdeaPluginDescriptor, FileVisitResult> consumer) {
@@ -1976,23 +1650,24 @@ public final class PluginManagerCore {
   }
 
   @ApiStatus.Internal
-  private static boolean processAllDependencies(@NotNull IdeaPluginDescriptor rootDescriptor,
+  private static boolean processAllDependencies(@NotNull IdeaPluginDescriptorImpl rootDescriptor,
                                                boolean withOptionalDeps,
                                                @NotNull Map<PluginId, IdeaPluginDescriptorImpl> idToMap,
                                                @NotNull Set<IdeaPluginDescriptor> depProcessed,
-                                               @NotNull BiFunction<? super PluginId, ? super IdeaPluginDescriptor, FileVisitResult> consumer) {
-    loop:
-    for (PluginId id : rootDescriptor.getDependentPluginIds()) {
-      if (!withOptionalDeps) {
-        for (PluginId otherId : rootDescriptor.getOptionalDependentPluginIds()) {
-          if (otherId == id) {
-            continue loop;
-          }
-        }
+                                               @NotNull BiFunction<? super PluginId, ? super IdeaPluginDescriptorImpl, FileVisitResult> consumer) {
+
+    if (rootDescriptor.pluginDependencies == null) {
+      return true;
+    }
+
+    for (PluginDependency dependency : rootDescriptor.pluginDependencies) {
+      if (!withOptionalDeps && dependency.isOptional) {
+        continue;
       }
 
-      IdeaPluginDescriptorImpl descriptor = idToMap.get(id);
-      switch (consumer.apply(id, descriptor)) {
+      IdeaPluginDescriptorImpl descriptor = idToMap.get(dependency.id);
+      PluginId pluginId = descriptor == null ? dependency.id : descriptor.getPluginId();
+      switch (consumer.apply(pluginId, descriptor)) {
         case TERMINATE:
           return false;
         case CONTINUE:
